Fixing padding on mobile menu

--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -678,7 +678,7 @@ a:hover, a:active {
 }
 .main-navigation.toggled > .menu-primary-container {
   padding: 1em;
-  margin-bottom: 3em;
+  margin-bottom: 4em;
   background-color: #008EAC;
 }
 
