--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -171,7 +171,7 @@
         
         & > .menu-primary-container {
             padding: 1em;
-            margin-bottom: 3em;
+            margin-bottom: 4em;
             background-color: #008EAC;
         }
 }
